service.yml
apiVersion: v1
kind: Service
metadata:
  name: test-docker-service-service
spec:
  selector:
    app: test-docker-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
