ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-docker-service-ingress
spec:
  rules:
    - host: arch.homework
      http:
        paths:
          - pathType: Exact
            path: "/health"
            backend:
              service:
                name: test-docker-service-service
                port:
                  number: 80
